<resources>
    <string name="app_name">MysticalAnimalCounseling</string>

    <!-- sample start -->
    <string name="sample_name_format">%s. %s %s</string>
    <string name="sample_empty_user">empty user</string>
    <!-- sample end -->

    <string name="write_counseling">고민 작성하기</string>
    <string name="title">제목</string>
    <string name="category">카테고리</string>
    <string name="feeling">기분</string>
    <string name="content">내용</string>
    <string name="have_counseling">고민이 있어요</string>
    <string name="what_is_title_of_counseling">고민의 제목이 무엇인가요?(최대 20자)</string>
    <string name="please_write_counseling">고민을 적어주세요 (최대 200자)</string>
    <string name="complete_counseling">작성 완료</string>
    <string name="my_page">마이페이지</string>
    <string name="my_counseling">내가 올린 고민들</string>
    <string name="my_answer">내가 남긴 답변들</string>
    <string name="own_counseling_badge_format" cdata="true"><![CDATA[보유한 고민 배지 <font color=#6DECA2>%d</font>]]></string>
    <string name="answer_count_format" cdata="true"><![CDATA[답변 <b>%d</b>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_my_location">내 위치 업데이트</string>
    <string name="name_nim"><b>소양이</b> 님</string>
    <string name="my_page_badge_description">고민을 올리면 배지를 획득할 수 있어요!</string>

</resources>