<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="mashup.mac.model.Feeling" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#312651">

        <TextView
            android:id="@+id/tv_counseling_title"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/write_counseling"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_counseling_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rect_counseling_write"
                    android:hint="@string/what_is_title_of_counseling"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray5"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/category"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_animal_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_animal_category" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="42dp"
                    android:text="@string/feeling"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/layout_feeling_happy"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rect_counseling_feeling_box"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/layout_feeling_happy"
                        layout="@layout/layout_feeling_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:feeling="@{Feeling.기쁨}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/layout_feeling_sad"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/layout_feeling_sad"
                        layout="@layout/layout_feeling_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:feeling="@{Feeling.슬픔}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/layout_feeling_angry"
                        app:layout_constraintStart_toEndOf="@id/layout_feeling_happy"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/layout_feeling_angry"
                        layout="@layout/layout_feeling_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:feeling="@{Feeling.화남}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/layout_feeling_embarrassed"
                        app:layout_constraintStart_toEndOf="@id/layout_feeling_sad"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/layout_feeling_embarrassed"
                        layout="@layout/layout_feeling_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:feeling="@{Feeling.당황}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/layout_feeling_irritation"
                        app:layout_constraintStart_toEndOf="@id/layout_feeling_angry"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/layout_feeling_irritation"
                        layout="@layout/layout_feeling_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:feeling="@{Feeling.짜증}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/layout_feeling_embarrassed"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/content"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rect_counseling_write"
                    android:gravity="start"
                    android:hint="@string/please_write_counseling"
                    android:inputType="text"
                    android:maxLength="200"
                    android:paddingStart="10dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray5"
                    android:textSize="14dp" />
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/point"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/complete_counseling"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>