<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainVm"
            type="mashup.mac.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        tools:context=".ui.main.MainActivity">

        <mashup.mac.ui.main.CounselingMapCustom
            android:id="@+id/custom_counseling_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_profile_img_mini"
            android:layout_width="@dimen/main_user_img_mini"
            android:layout_height="@dimen/main_user_img_mini"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/circle_monkey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:onClick="@{() -> mainVm.onClickMyPage(context)}"
            android:text="@string/name_nim"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile_img_mini"
            app:layout_constraintStart_toEndOf="@id/iv_profile_img_mini"
            app:layout_constraintTop_toTopOf="@id/iv_profile_img_mini" />

        <TextView
            android:id="@+id/btn_counseling_write"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rect_green_rad_30"
            android:clickable="true"
            android:backgroundTint="@color/point"
            android:gravity="center"
            android:paddingStart="23dp"
            android:paddingEnd="23dp"
            android:textColor="@color/white"
            android:onClick="@{() -> mainVm.onClickCounselingWrite(context)}"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/have_counseling"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_distance_kilometer"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/main_btn_gradient"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:text="5Km"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/btn_main_reset"
            android:layout_width="@dimen/main_icon"
            android:layout_height="@dimen/main_icon"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rect_green_rad_30"
            android:backgroundTint="@color/point"
            android:onClick="@{() -> mainVm.onClickReset()}"
            android:padding="6dp"
            android:src="@drawable/ic_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_main_list"
            android:layout_width="@dimen/main_icon"
            android:layout_height="@dimen/main_icon"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rect_green_rad_30"
            android:backgroundTint="@color/point"
            android:onClick="@{() -> mainVm.onClickList()}"
            android:padding="6dp"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="@id/btn_main_reset"
            app:layout_constraintEnd_toStartOf="@id/btn_main_reset"
            app:layout_constraintTop_toTopOf="@id/btn_main_reset" />

        <ImageView
            android:id="@+id/iv_profile_img"
            android:layout_width="@dimen/main_user_img"
            android:layout_height="@dimen/main_user_img"
            android:src="@drawable/circle_monkey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_user_name"
            android:background="@drawable/rect_green_rad_30"
            android:layout_marginTop="6dp"
            android:onClick="@{() -> mainVm.onClickMyPage(context)}"
            android:backgroundTint="@color/point"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/update_my_location"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_img"
            app:layout_constraintStart_toStartOf="@id/iv_profile_img"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_img" />

        <FrameLayout
            android:id="@+id/layout_frame_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>